renamed person to entry (covers couples/families), fixed word count issue?; added personal pairs file

--- a/app/assets/stylesheets/people.css.scss
+++ b/app/assets/stylesheets/people.css.scss
@@ -35,7 +35,7 @@ body {
   background-repeat: no-repeat;
 }
 
-.person {
+.entry {
   margin: 10px auto 20px auto;
   width: 300px;
   display: block;
